--- a/css/index.css
+++ b/css/index.css
@@ -310,8 +310,8 @@ body{
     justify-content: center;
 }
 .social-media{
-    color: white;
-    width:  60px;
+    color: rgb(255, 255, 255);
+    width:  70px;
     ;
     opacity: .6;
     margin: 8px;
@@ -1281,7 +1281,7 @@ form button:hover{
     background: #080808;
     width: 100%;
     padding: 20px;
-    color: whitesmoke;
+    color: rgba(168, 168, 168, 0.675);
     display: flex;
     flex-direction: column;
     font-family: poppins;
@@ -1291,11 +1291,12 @@ form button:hover{
 .footer .footer-text{
     position: relative;
     display: inline;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 1;
     text-align: center;
 }
+
 .color-changer{
     height: auto;
     width: auto;
