--- a/css/index.css
+++ b/css/index.css
@@ -660,7 +660,7 @@ body{
 
 
 #skills {
-    padding: 50px 0;
+    padding: 30px 0;
     background: #ffffff;
 }
 
@@ -1130,17 +1130,23 @@ padding-bottom: 40px;
     margin: auto;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: left;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    display: flex;
+    height: auto;
+    overflow: hidden;
 }
+
+
 .contact-info{
     width: 40%;
-    height: 500px;
+    height: 600px;
     background: url(../images/contact-back.png);
     background-position: center;
     background-size: cover;
-    border-radius: 16px;
+    border-radius: 12px;
     margin-bottom: 50px;
     position: relative;
     overflow: hidden;
@@ -2622,4 +2628,24 @@ for tabs and large phones
         border-radius: 8px;
         transition: all .4s ease;
     }
-}
+
+    .badge-container {
+        display: flex;
+        width:100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .badge-column {
+        display: flex;
+        align-items: center;
+        margin-bottom: 15px;
+        justify-content: center;
+        color: rgb(0, 0, 0); 
+    }
+    }
+    .badge-column a {
+        display: block;
+        margin: 10px 0;
+        text-align: center;
+    }
+ 
