--- a/css/index.css
+++ b/css/index.css
@@ -222,19 +222,29 @@ body{
     opacity: 1;
     transform:rotate(-45deg);
 }
-.header-image img{
-    height: 100vh;
-    float: right;
-}
-.header-image{
-    float: right;
-    height: auto;
-    background-size: cover;
-    background-position: center;
-    width: 40%;   
-    height: 80vh;
 
+.header-image {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 35%; /* Ajusta según sea necesario */
+    height: 60%; /* Mantén las dimensiones iguales para asegurar un círculo perfecto */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Asegura que cualquier parte de la imagen fuera del círculo no se muestre */
+    border-radius: 50%; /* Hace que el contenedor sea un círculo */
+    
 }
+.header-image img {
+    width: 100%;
+    height: 100%; /* Mantén la proporción de la imagen */
+    border-radius: 50%;
+    object-fit: contain; /* Asegura que la imagen se ajuste correctamente al contenedor redondo */
+}
+
+
 .header-content{
     height: 100vh;
     width: 100%;
