--- a/css/index.css
+++ b/css/index.css
@@ -229,7 +229,7 @@ body{
     right: 0;
     transform: translateY(-50%);
     width: 35%; /* Ajusta según sea necesario */
-    height: 70%; /* Mantén las dimensiones iguales para asegurar un círculo perfecto */
+    height: 60%; /* Mantén las dimensiones iguales para asegurar un círculo perfecto */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1450,11 +1450,22 @@ For devices with smaller width like mobile phone
     .contact{
         display: none;
     }
-    .header-image{
-        float: right;
+    .header-image {
+        position: static;
+        transform: none;
+        width: 100%;
         height: auto;
-        width: 0%;   
-    }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0; /* Espacio alrededor de la imagen, ajusta según sea necesario */
+      }
+  
+      .header-image img {
+        width: 50%; /* Ajusta según sea necesario */
+        height: auto;
+        border-radius: 50%;
+      }
     .social-media-links{
         width: 100%;
         left: 0;
@@ -1739,12 +1750,12 @@ For devices with smaller width like mobile phone
                 justify-content: center;
             }
             .contact-info{
-                width: 40%;
-                height: 700px;
+                width: 70%;
+                height: 300px;
                 background-position: center;
                 background-size: cover;
                 border-radius: 12px;
-                margin-bottom: 50px;
+                margin-bottom: 15px;
                 position: relative;
                 overflow: hidden;
             }
@@ -1905,11 +1916,21 @@ for tabs and large phones
         letter-spacing: 2px;
         font-size: 40px;
     }
-    .header-image{
-        float: right;
-        height: auto;
-        width: 0%;   
-    }
+    .header-image {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 150px; /* Ajusta según sea necesario */
+        height: 150px; /* Mantén las dimensiones iguales para asegurar un círculo perfecto */
+      }
+  
+      .header-image img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+      }
     .social-media-links{
         width: 100%;
         left: 0;
@@ -2211,12 +2232,12 @@ for tabs and large phones
                 justify-content: center;
             }
             .contact-info{
-                width: 40%;
-                height: 700px;
+                width: 70%;
+                height: 300px;
                 background-position: center;
                 background-size: cover;
                 border-radius: 12px;
-                margin-bottom: 50px;
+                margin-bottom: 25px;
                 position: relative;
                 overflow: hidden;
             }
