--- a/css/index.css
+++ b/css/index.css
@@ -1750,12 +1750,12 @@ For devices with smaller width like mobile phone
                 justify-content: center;
             }
             .contact-info{
-                width: 70%;
-                height: 300px;
+                width: 90%;
+                height: 600px;
                 background-position: center;
                 background-size: cover;
-                border-radius: 12px;
-                margin-bottom: 15px;
+                border-radius: 16px;
+                margin-bottom: 25px;
                 position: relative;
                 overflow: hidden;
             }
@@ -1916,21 +1916,22 @@ for tabs and large phones
         letter-spacing: 2px;
         font-size: 40px;
     }
-    .header-image {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 150px; /* Ajusta según sea necesario */
-        height: 150px; /* Mantén las dimensiones iguales para asegurar un círculo perfecto */
-      }
-  
-      .header-image img {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        object-fit: cover;
-      }
+.header-image {
+      position: static;
+      transform: none;
+      width: 100%;
+      height: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 20px 0; /* Espacio alrededor de la imagen, ajusta según sea necesario */
+    }
+
+    .header-image img {
+      width: 50%; /* Ajusta según sea necesario */
+      height: auto;
+      border-radius: 50%;
+    }
     .social-media-links{
         width: 100%;
         left: 0;
@@ -2232,12 +2233,12 @@ for tabs and large phones
                 justify-content: center;
             }
             .contact-info{
-                width: 70%;
-                height: 300px;
+                width: 900%;
+                height: 700px;
                 background-position: center;
                 background-size: cover;
-                border-radius: 12px;
-                margin-bottom: 25px;
+                border-radius: 16px;
+                margin-bottom: 40px;
                 position: relative;
                 overflow: hidden;
             }
