--- a/css/index.css
+++ b/css/index.css
@@ -511,10 +511,16 @@ body{
     border-radius: 40px;
 }
 .about-img {
-    width: 550px;
-    height:auto;
+    flex: 1;
+    max-width: 100%;
     padding: 30px;
     padding-top: 10px;
+    border-radius: 40px;
+    box-sizing: border-box; /* Incluye el padding en el tamaño total del contenedor */
+}
+.about-img video {
+    width: 100%;
+    height: 380px;
     border-radius: 40px;
 }
 
